feat: 成果報告書のリンクを追加

--- a/zola/content/publication/2022.md
+++ b/zola/content/publication/2022.md
@@ -3,3 +3,5 @@ title = "2022年度"
 +++
 
 2022年度の成果報告会を2023年6月3日に筑波大学3B棟の3A202で開催しました。
+
+成果報告書：[成果報告書20230603.pdf](https://files.ac-room.org/public/%E6%88%90%E6%9E%9C%E5%A0%B1%E5%91%8A%E6%9B%B820230603.pdf)
