content: update 2024 report link

--- a/content/publication/2024.md
+++ b/content/publication/2024.md
@@ -4,4 +4,4 @@ title = "2024年度"
 
 2024年度の成果報告会を2025年4月13日に筑波大学3A棟の3A202で開催しました。
 
-成果報告書：[成果報告書20250413.pdf](https://files.ac-room.org/public/%E6%88%90%E6%9E%9C%E5%A0%B1%E5%91%8A%E6%9B%B820250413.pdf)
+成果報告書：[成果報告書20250413.pdf](https://www.ac-room.org/public/%E6%88%90%E6%9E%9C%E5%A0%B1%E5%91%8A%E6%9B%B820250413.pdf)
